--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-title: Nabila Sa'diyah | Data Analyst and Data Science Enthusiast # your site title
+title: Nabila Sa'diyah | Data Enthusiast # your site title
 author: GitHub User # You :P
 description: > # Meta description of Homepage
   Write an awesome description for your new site here. You can edit this
